Fixed singleton instances

--- a/app/entrypoints/cmd/config/stack.yaml
+++ b/app/entrypoints/cmd/config/stack.yaml
@@ -1,23 +1,25 @@
 newyeti_1:
   redis:
+    client_id: newyeti-cluster-1
     url: https://gusc1-sought-glider-30297.upstash.io
     token: ${oc.env:KAFKA_PASSWORD}
   kafka: 
     bootstrap_servers: 
       - unbiased-coral-13008-us1-kafka.upstash.io:9092
-    client_id: 'newyeti-cluster-0'
+    client_id: 'newyeti-cluster-1'
     sasl_mechanism: SCRAM-SHA-256
     security_protocol: SASL_SSL
     sasl_plain_username: ${oc.env:KAFKA_USERNAME}
     sasl_plain_password: ${oc.env:KAFKA_PASSWORD}
 newyeti_2:
   redis:
+    client_id: newyeti-cluster-2
     url: https://gusc1-sought-glider-30297.upstash.io
     token: ${oc.env:KAFKA_PASSWORD}
   kafka: 
     bootstrap_servers: 
       - unbiased-coral-13008-us1-kafka.upstash.io:9092
-    client_id: 'newyeti-cluster-0'
+    client_id: 'newyeti-cluster-2'
     sasl_mechanism: SCRAM-SHA-256
     security_protocol: SASL_SSL
     sasl_plain_username: ${oc.env:KAFKA_USERNAME}
