--- a/app/entrypoints/cmd/config/stack.yaml
+++ b/app/entrypoints/cmd/config/stack.yaml
@@ -1,29 +1,42 @@
 newyeti_1:
   redis:
-    client_id: newyeti-cluster-1
-    url: https://gusc1-sought-glider-30297.upstash.io
-    token: ${oc.env:KAFKA_PASSWORD}
+    client_id: ${oc.env:NEWYETI1_CLIENT_ID}-redis
+    host: ${oc.env:NEWYETI1_REDIS_HOST}
+    port: ${oc.env:NEWYETI1_REDIS_PORT}
+    password: ${oc.env:NEWYETI1_REDIS_PASSWORD}
   kafka: 
     bootstrap_servers: 
-      - unbiased-coral-13008-us1-kafka.upstash.io:9092
-    client_id: 'newyeti-cluster-1'
+      - ${oc.env:NEWYETI1_KAFKA_BOOTSTRAP_SERVERS}
+    client_id: ${oc.env:NEWYETI1_CLIENT_ID}-kafka
     sasl_mechanism: SCRAM-SHA-256
     security_protocol: SASL_SSL
-    sasl_plain_username: ${oc.env:KAFKA_USERNAME}
-    sasl_plain_password: ${oc.env:KAFKA_PASSWORD}
+    sasl_plain_username: ${oc.env:NEWYETI1_KAFKA_USERNAME}
+    sasl_plain_password: ${oc.env:NEWYETI1_KAFKA_PASSWORD}
 newyeti_2:
   redis:
-    client_id: newyeti-cluster-2
-    url: https://gusc1-sought-glider-30297.upstash.io
-    token: ${oc.env:KAFKA_PASSWORD}
+    client_id: ${oc.env:NEWYETI2_CLIENT_ID}-redis
+    host: ${oc.env:NEWYETI2_REDIS_HOST}
+    port: ${oc.env:NEWYETI2_REDIS_PORT}
+    password: ${oc.env:NEWYETI2_REDIS_PASSWORD}
   kafka: 
     bootstrap_servers: 
-      - unbiased-coral-13008-us1-kafka.upstash.io:9092
-    client_id: 'newyeti-cluster-2'
+      - ${oc.env:NEWYETI2_KAFKA_BOOTSTRAP_SERVERS}
+    client_id: ${oc.env:NEWYETI2_CLIENT_ID}-kafka
     sasl_mechanism: SCRAM-SHA-256
     security_protocol: SASL_SSL
-    sasl_plain_username: ${oc.env:KAFKA_USERNAME}
-    sasl_plain_password: ${oc.env:KAFKA_PASSWORD}
-
-
-
+    sasl_plain_username: ${oc.env:NEWYETI2_KAFKA_USERNAME}
+    sasl_plain_password: ${oc.env:NEWYETI2_KAFKA_PASSWORD}
+newyeti_3:
+  redis:
+    client_id: ${oc.env:NEWYETI2_CLIENT_ID}-redis
+    host: ${oc.env:NEWYETI2_REDIS_HOST}
+    port: ${oc.env:NEWYETI2_REDIS_PORT}
+    password: ${oc.env:NEWYETI2_REDIS_PASSWORD}
+  kafka: 
+    bootstrap_servers: 
+      - ${oc.env:NEWYETI2_KAFKA_BOOTSTRAP_SERVERS}
+    client_id: ${oc.env:NEWYETI2_CLIENT_ID}-kafka
+    sasl_mechanism: SCRAM-SHA-256
+    security_protocol: SASL_SSL
+    sasl_plain_username: ${oc.env:NEWYETI2_KAFKA_USERNAME}
+    sasl_plain_password: ${oc.env:NEWYETI2_KAFKA_PASSWORD}
