--- a/app/entrypoints/cmd/config/app.yaml
+++ b/app/entrypoints/cmd/config/app.yaml
@@ -6,7 +6,13 @@ defaults:
 app:
   name: Telemetry CLI
   stacks: 
-  - ${newyeti_1}
-  - ${newyeti_2}
-  - ${newyeti_3}
+  - ${newyeti-1}
+  - ${newyeti-2}
+  - ${newyeti-3}
+  control:
+    redis:
+      client_id: ${oc.env:NEWYETI_CLIENT_ID}-redis
+      host: ${oc.env:NEWYETI-CONTROL_REDIS_HOST}
+      port: ${oc.env:NEWYETI-CONTROL_REDIS_PORT}
+      password: ${oc.env:NEWYETI-CONTROL_REDIS_PASSWORD}
   service: ${service}
