--- a/app/entrypoints/tests/config/app.yaml
+++ b/app/entrypoints/tests/config/app.yaml
@@ -6,5 +6,12 @@ defaults:
 app:
   name: Telemetry CLI
   stacks: 
-  - ${newyeti_0}
+  - ${newyeti-test}
   service: ${service}
+  control:
+    redis:
+      client_id: ${oc.env:NEWYETI0_CLIENT_ID}-redis
+      host: ${oc.env:NEWYETI0_REDIS_HOST}
+      port: ${oc.env:NEWYETI0_REDIS_PORT}
+      password: ${oc.env:NEWYETI0_REDIS_PASSWORD}
+  
