--- a/app/entrypoints/cmd/config/app.yaml
+++ b/app/entrypoints/cmd/config/app.yaml
@@ -16,3 +16,8 @@ app:
       port: ${oc.env:NEWYETI-CONTROL_REDIS_PORT}
       password: ${oc.env:NEWYETI-CONTROL_REDIS_PASSWORD}
   service: ${service}
+  message:
+    batch_size: 10
+    kafka_daily_limit: 10000
+    kafka_per_second_limit: 100
+    redis_daily_limit: 10000
